  * Drop udev-re-enable-mount-propagation-for-udevd.patch, i. e. run udevd in
    its own slave mount name space again. laptop-mode-tools 1.68 fixed the
    original bug (#762018), thus add a Breaks: to earlier versions.
  * Ship fbdev-blacklist.conf in /lib/modprobe.d/ instead of /etc/modprobe.d/;
    remove the conffile on upgrades.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Apr 2016 22:20:43 +0200

systemd (229-5) unstable; urgency=medium

  * debian/tests/unit-config: Call "daemon-reload" to clean up generated units
    in between tests.
  * debian/tests/unit-config: Check that enable/disable commands are
    idempotent.
  * debian/tests/unit-config: Detect if system units are in /usr/, so that the
    test works on systems with merged /usr.
  * debian/tests/unit-config: Use systemd-sysv-install instead of update-rc.d
    directly, so that the test works under Fedora too.
  * debian/tests/unit-config: Check disabling of a "systemctl link"ed unit,
    and check "systemctl enable" on a unit with full path which is not in the
    standard directories.
  * Rename debian/extra/rules/73-idrac.rules to 73-special-net-names.rules, as
    it is going to get rules for other devices. Also install it into the
    initramfs.
  * debian/extra/rules/73-special-net-names.rules: Add DEVPATH number based
    naming schema for ibmveth devices. (LP: #1561096)
  * Don't set SYSTEMD_READY=0 on DM_UDEV_DISABLE_OTHER_RULES_FLAG=1 devmapper
    devices with "change" events, as this causes spurious unmounting with
    multipath devices. (LP: #1565969)
  * Fix bogus "No [Install] section" warning when enabling a unit with full
    path. (LP: #1563590)
  * debian/tests/cmdline-upstart-boot: In test_rsyslog(), check for messages
    from dbus instead of NetworkManager. NM 1.2 does not seem to log to syslog
    by default any more.
  * Bump Standards-Version to 3.9.8 (no changes necessary).
  * debian/tests/boot-smoke: Add some extra debugging if there are pending