@@ -31,6 +31,7 @@ rules-set-SYSTEMD_READY-0-on-DM_UDEV_DISABLE_OTHER_RULES_.patch
 Install-correctly-report-symlink-creations.patch
 Mark-nbd-as-inactive-until-connected-2422.patch
 tmp.mount.hm4-After-swap.target-3087.patch
+path-util-Add-hidden-suffixes-for-ucf-3131.patch
 debian/Use-Debian-specific-config-files.patch
 debian/don-t-try-to-start-autovt-units-when-not-running-wit.patch
 debian/Make-logind-hostnamed-localed-timedated-D-Bus-activa.patch
@@ -50,7 +51,6 @@ debian/Stop-syslog.socket-when-entering-emergency-mode.patch
 debian/Include-additional-directories-in-ProtectSystem.patch
 debian/Re-enable-journal-forwarding-to-syslog.patch
 debian/Don-t-enable-audit-by-default.patch
-debian/util-Add-hidden-suffixes-for-ucf.patch
 debian/Only-start-logind-if-dbus-is-installed.patch
 debian/cgroup-don-t-trim-cgroup-trees-created-by-someone-el.patch
 debian/fsckd-daemon-for-inter-fsckd-communication.patch
